force-app/main/default/objects/TMG_Coaching_Guide__c/TMG_Coaching_Guide__c.object-meta.xml
<CustomObject>
    <label>TMG Coaching Guides</label>
    <nameField>
        <label>TMG Coaching Guides ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMG Coaching Guides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>