force-app/main/default/objects/TMG_Coaching_Guide__c/fields/Leadership_Accelerator_Link__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Accelerator_Link__c</fullName>
    <label>Leadership Accelerator Link</label>
    <type>Url</type>
</CustomField>