force-app/main/default/objects/TMG_Coaching_Guide__c/fields/Related_Videos__c.field-meta.xml
<CustomField>
    <fullName>Related_Videos__c</fullName>
    <label>Related Videos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>