force-app/main/default/objects/TMG_Coaching_Guide__c/fields/TMG_Coaching_Guide_Category__c.field-meta.xml
<CustomField>
    <fullName>TMG_Coaching_Guide_Category__c</fullName>
    <label>TMG Coaching Guide Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>