force-app/main/default/objects/TMG_Coaching_Guide__c/fields/TMG_Coaching_Guide_Name__c.field-meta.xml
<CustomField>
    <fullName>TMG_Coaching_Guide_Name__c</fullName>
    <label>TMG Coaching Guide Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>