force-app/main/default/objects/TMG_Coaching_Guide__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TMG_Coaching_Guide_Name__c</columns>
    <columns>TMG_Coaching_Guide_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>